wark: work in progress

--- a/Übung5/assignment5/TODO.txt
+++ b/Übung5/assignment5/TODO.txt
@@ -1,5 +1,6 @@
 Functions:
-- warp
-- downsample_x2     -> DONE !?
-- gaussian_pyramid  -> DONE !?
-- coarse_to_fine
+- compute_motion    -> DONE (fast)
+- warp              -> TODO
+- downsample_x2     -> DONE
+- gaussian_pyramid  -> DONE
+- coarse_to_fine    -> TODO
